# parallel-programming-lab-1

./: .gitignore  CMakeLists.txt  CSquareMatrix.cpp  README.md  colab.ipynb  lab3.cpp  lab3.slurm  report_lab_1.md  verification_of_the_result.py
